2004-04-24 Duncan Coutts <duncan@coutts.uklinux.net>

	* gtk/abstract/Object.chs: fixed warning

2004-04-18 Axel Simon <A.Simon@kent.ac.uk>

	* demo/glade/Makefile, glade/Makefile: Renamed the glade library
	to glade2hs. I got link errors since the only libglade which is
	picked up is the real libglade.a whereas the Haskell binding is
	never found.
	
2004-04-17 Axel Simon <A.Simon@kent.ac.uk>

	* VERSION: bumped to 0.9.5

2004-04-16 Duncan Coutts <duncan@coutts.uklinux.net>

	* gtk/layout/Notebook.chs: added ifdef's for compatibility
	with gtk 2.4 as well as 2.2 & 2.0

	* sourceview/SourceIter.chs: new file with bindings for
	three extra TextIter methods

	* sourceview/Makefile: added header for extra file

	* sourceview/sourceview.h: added header for extra file

	* sourceview/SourceView.chs: added extra exported module

2004-04-15 Duncan Coutts <duncan@coutts.uklinux.net>

	* modul/WidgetTable.hs: added import of FFI (foreignPtrToPtr)
	for GHC 6.2

2004-01-07 Axel Simon <A.Simon@kent.ukc.ac.uk>

	* c2hs/c/Attrs.hs: Remove a superfluous comma.

	* gtk/general/FFI.hs: Rename unsafeForeignPtrToPtr to
	foreignPtrToPtr for GHC 6.2. 

	* AUTHORS: Mention JP Bernardy who supplied the patch.

2003-12-11 Duncan Coutts <duncan@coutts.uklinux.net>

	* tools/hierarchyGen/TypeGen.hs: changed the way the object
	hierarchy is implemented. All classes except GObject now have
	no member functions. The from* to* functions are now ordinary
	functions with a class constraint. This saves carrying around
	so many class dictionaries per object - now only one.

	* configure.in: added libglade detection

	* Makefile: added glade and demo/glade targets

	* mk/config.mk.in: added LIBGLADE_* variables

	* tools/hierarchyGen/hierarchy.list: added GladeXML class

	* glade/Glade.chs: new libglade binding module

	* glade/Makefile: new file

	* demo/glade/Makefile: new file

	* demo/glade/GladeTest.hs: simple demo of Glade functionality
